--- a/views/googlemap.handlebars
+++ b/views/googlemap.handlebars
@@ -78,7 +78,7 @@
 
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUfag1Idgwyny6lSKNWne5UsLUj2uS8XA&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=initMap&v=weekly"
       defer
     ></script>
   </body>
