--- a/views/listCar2.handlebars
+++ b/views/listCar2.handlebars
@@ -41,21 +41,7 @@
 
 
 
-{{!-- <script
-            id="script-js"
-            defer
-            src="https://api.mapbox.com/search-js/v1.0.0-beta.11/web.js"
-            >
-</script>
 
-<script>        
-            const script = document.getElementById('script-js');
-            script.onload = function() {
-            mapboxsearch.autofill({
-            accessToken: 'pk.eyJ1IjoieWFzaC1hZ2Fyd2FsLTMwMTgiLCJhIjoiY2w0bzIyZml2MDBvaDNwb3hwZm9vY3RjYSJ9.OHq0IXGOQe2gF2AijAt0Ag'
-            });
-            };
-</script>     --}}
 
 <script>
   function initMap(){
@@ -65,7 +51,7 @@
 </script>
 
 <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUfag1Idgwyny6lSKNWne5UsLUj2uS8XA&libraries=places&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&libraries=places&callback=initMap">
 </script>
 
 
