--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -20,7 +20,7 @@
             </div>
             <script 
             src="https://checkout.stripe.com/checkout.js"
-            data-key="pk_test_51LFZVzSC8b5jesjZX9NFi63GPQ5GOEoPZiLzq4srK8SyFECikmsGy8AirLxZHZox0LrnjVCEjacJrUoj5eCmHQ2J00VEZdViMP"               
+            data-key="YOUR_PK_KEY"               
             class="stripe-button"
             data-amount="{{stripeTotal}}"
             data-name="Yash Car Rental Services"
