--- a/views/listCar.handlebars
+++ b/views/listCar.handlebars
@@ -3,7 +3,7 @@
     
     <div class="col-sm-4">
         <h1>List a car</h1>
-        <form action="/listcar" method="POST">
+        <form action="/listCar" method="POST">
           <div class="form-group">
             <label for="make">Make</label>
             <input type="text" name="make" id="make" class="form-control" required>
